# teforway

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: codeql-analysis.yml
telegram_sender/: config_loader.py  main.py  routes.py
tests/: test_telegram_sender.py
