[tool.poetry]
name = "telegram-sender"
version = "0.1.0"
description = ""
authors = ["naxrevlis <me@naxrevlis.com>"]

[tool.poetry.dependencies]
python = "^3.9"
configloader = "^1.0.1"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
PyYAML = "^6.0"
aiogram = "^2.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.15.0"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
